batch-common/kubernetes/server/server-deployment-openshift.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scdf-server
  labels:
    app: scdf-server
spec:
  selector:
    matchLabels:
      app: scdf-server
  replicas: 1
  template:
    metadata:
      labels:
        app: scdf-server
    spec:
      containers:
      - name: scdf-server
        image: springcloud/spring-cloud-dataflow-server:2.11.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: config
            mountPath: /workspace/config
            readOnly: true
        ports:
        - containerPort: 9393
        livenessProbe:
          httpGet:
            path: /management/health/liveness
            port: 9393
          initialDelaySeconds: 0
        readinessProbe:
          httpGet:
            path: /management/health/readiness
            port: 9393
          initialDelaySeconds: 0
        startupProbe:
          tcpSocket:
            port: 9393
          initialDelaySeconds: 15
          periodSeconds: 3
          failureThreshold: 120
          timeoutSeconds: 3
        resources:
          requests:
            cpu: 1500m
            memory: 1024Mi
          limits:
            cpu: 1500m
            memory: 1024Mi
      serviceAccountName: scdf-sa
      volumes:
        - name: config
          configMap:
            name: scdf-server
            items:
            - key: application.yaml
              path: application.yaml
