batch-common/kubernetes/server/server-openshift-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: scdf-server
  namespace: <PROJECT_NAME>
  labels:
    app: scdf-server
  annotations:
    haproxy.router.openshift.io/ip_whitelist: <IP_WHITELIST>
    haproxy.router.openshift.io/rewrite-target: /
spec:
  host: <ENDPOINT_DOMAIN_NAME>
  path: /
  to:
    kind: Service
    name: scdf-server
    weight: 100
  port:
    targetPort: 9393
  tls:
    termination: edge
  wildcardPolicy: None
